# 1dv534

./: .gitignore  README.md
libs/: CMakeLists.txt
libs/include/: Clock.h  MyTime.h  menu.h
libs/lib/: Placeholder.txt  libmenu.lib
libs/source/: Clock.cpp  MyTime.cpp  menu.cpp
step1/: main.cpp  miserable.cpp  miserable.h
step1/1dv534.1.3_gomoku/: CMakeLists.txt  README.md
step1/1dv534.1.3_gomoku/game-engine/: CMakeLists.txt
step1/1dv534.1.3_gomoku/game-engine/include/: TakeFive.h
step1/1dv534.1.3_gomoku/game-engine/lib/: libtakeFive.lib
step1/1dv534.1.3_gomoku/game-engine/source/: TakeFive.cpp
step1/1dv534.1.3_gomoku/src/: CMakeLists.txt  gomoku.cpp  gomoku.h  main.cpp
step1/1dv534_1_1_debug/: CMakeLists.txt
step1/1dv534_1_1_debug/src/: CMakeLists.txt  debug.cpp  debug.h  main.cpp
step1/1dv534_1_1_debug/test/: CMakeLists.txt  debug-test.cpp
step1/1dv534_1_1_miserable/: CMakeLists.txt  ClassDiagram.class.violet.html  SequenceDiagram.seq.violet.html
step1/1dv534_1_1_miserable/src/: CMakeLists.txt  file-measurements.cpp  file-measurements.h  main.cpp  measurements.h  miserable.cpp
step1/1dv534_1_1_miserable/test/: CMakeLists.txt  measurements-mock.cpp  measurements-mock.h  miserable-test.cpp
step2/1dv534_2_1_typing/: 1dv534_2_1_typing.sln  CMakeLists.txt
step2/1dv534_2_1_typing/1dv534_2_1_typing/: 1dv534_2_1_typing.vcxproj  1dv534_2_1_typing.vcxproj.filters  compare.cpp  compare.h  main.cpp  typing.cpp  typing.h
step2/1dv534_2_1_typing/src/: CMakeLists.txt  compare.cpp  main.cpp  typing.cpp  typing.h
step2/1dv534_2_1_typing/test/: CMakeLists.txt  compare-test.cpp
step2/1dv534_2_2_strings/: CMakeLists.txt  ConstrutorCalls.txt  strings.sln
step2/1dv534_2_2_strings/string/: CMakeLists.txt
step2/1dv534_2_2_strings/string/include/: String.h
step2/1dv534_2_2_strings/string/source/: String.cpp
step2/1dv534_2_2_strings/strings/: String.cpp  String.h  Test2_2.cpp  strings.vcxproj  strings.vcxproj.filters
step2/1dv534_2_2_strings/test/: CMakeLists.txt  Test2_2.cpp
step3/1dv534_3_1_text_handler/: CMakeLists.txt
step3/1dv534_3_1_text_handler/1dv534_3_1_text_handler/: CMakeLists.txt  TextTest.cpp  Texthandler.cpp  Texthandler.h
step3/1dv534_3_2_framework/: CMakeLists.txt
step3/1dv534_3_2_framework/1dv534_3_2_framework/: 1dv534_3_2_framework.cpp  1dv534_3_2_framework.h  CMakeLists.txt  GameFramework.h  IGame.h  IPlayer.h  UserInput.cpp  UserInput.h
step3/1dv534_3_2_framework/1dv534_3_2_framework/Blackjack/: BlackjackGame.cpp  BlackjackGame.h  BlackjackPlayer.cpp  BlackjackPlayer.h
step3/1dv534_3_2_framework/1dv534_3_2_framework/Crap/: CrapGameWrapper.cpp  CrapGameWrapper.h
step4/1dv534_4_3_lexicon/: CMakeLists.txt
step4/1dv534_4_3_lexicon/1dv534_4_3_lexicon/: CMakeLists.txt  Lexikontest.cpp  List.h  MemoryLeakDetector.h  TList.cpp  WList.cpp
